--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "bcrypt": "^5.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.11.2"
   },
   "browserlist": [
