--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": " jest"
+    "test": "jest"
   },
   "keywords": [
     "react"
@@ -13,6 +13,12 @@
   "author": "Shakti Prasanna Sahoo",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@testing-library/react": "^16.1.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.13.3",
     "postcss": "^8.4.49",
     "process": "^0.11.10",
@@ -26,7 +32,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.11.2"
   },
-  "browserlist": [
+  "browserslist": [
     "last 3 versions"
   ]
 }
